[tool.poetry]
name = "13-1"
version = "0.1.0"
description = ""
authors = ["Ilya <rozhkovich.ilya97@gmail.com>"]
readme = "README.md"
packages = [{include = "13"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.1"
product = "^0.1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
